@@ -2,6 +2,7 @@
 * MAJOR CHANGE: new export/import format
 * Handle a missing Python Image Library more gracefully
 * Tidy up image handling functions
+* Fix a timezone bug in the calculation of days left.
 
 20090905 mnemogogo-0.9.4
 * Randomize the choice of new cards.
